[project]
name = "booking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "eternal-silence00",email = "andron555666777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "bcrypt (<4.1)"
]

[tool.poetry]
packages = [{include = "booking_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
